// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifGrid Debe ser igual al SnapShot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce"
  >
    Goku
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en GifGrid debe de generar items cuando se hace fetch  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce"
  >
    Goku
  </h3>
  <p
    className="animate__animated animate__flash"
  />
  <div
    className="card-grid"
  >
    <GifGridItem
      id="Hola"
      key="Hola"
      title="Titulo"
      url="url"
    />
  </div>
</Fragment>
`;
